components/go-sample/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: purple-mermaid-app
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: go-sample
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elgo-sample
  namespace: nmukherj
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-go-sample
    weight: null
status: {}
